netbench/netbench/src/scenario/snapshots/netbench__scenario__builder__tests__conn_checkpoints.snap
---
source: netbench/netbench/src/scenario/builder.rs
assertion_line: 887
expression: scenario

---
{
  "id": "feb2fbc869b360cd5faca9b77593106e35e1c68ffb40189ff63ebf10e8695862",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "scope": {
                "threads": [
                  [
                    {
                      "send_stream": {
                        "stream_id": 0
                      }
                    },
                    {
                      "send_rate": {
                        "stream_id": 0,
                        "bytes": 10000,
                        "period_ms": 50
                      }
                    },
                    {
                      "send": {
                        "stream_id": 0,
                        "bytes": 500000
                      }
                    },
                    {
                      "unpark": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send": {
                        "stream_id": 0,
                        "bytes": 500000
                      }
                    }
                  ],
                  [
                    {
                      "send_stream": {
                        "stream_id": 1
                      }
                    },
                    {
                      "park": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send_rate": {
                        "stream_id": 1,
                        "bytes": 1024,
                        "period_ms": 50
                      }
                    },
                    {
                      "send": {
                        "stream_id": 1,
                        "bytes": 1000000
                      }
                    }
                  ]
                ]
              }
            }
          ]
        }
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 10000,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 1000000
                }
              }
            ],
            [
              {
                "receive_rate": {
                  "stream_id": 1,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 1,
                  "bytes": 1000000
                }
              }
            ]
          ]
        }
      ]
    }
  ]
}
