netbench/netbench/src/scenario/snapshots/netbench__scenario__builder__tests__linked_streams.snap
---
source: netbench/netbench/src/scenario/builder.rs
assertion_line: 875
expression: scenario

---
{
  "id": "5b31afb77b16c406ab5083f4b38e46156c01c0b1ab54e41de305d52b5efc894b",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "scope": {
                "threads": [
                  [
                    {
                      "bidirectional_stream": {
                        "stream_id": 0
                      }
                    },
                    {
                      "scope": {
                        "threads": [
                          [
                            {
                              "send_rate": {
                                "stream_id": 0,
                                "bytes": 1024,
                                "period_ms": 50
                              }
                            },
                            {
                              "send": {
                                "stream_id": 0,
                                "bytes": 1000000
                              }
                            }
                          ],
                          [
                            {
                              "receive_all": {
                                "stream_id": 0
                              }
                            }
                          ]
                        ]
                      }
                    },
                    {
                      "unpark": {
                        "checkpoint": 0
                      }
                    }
                  ],
                  [
                    {
                      "send_stream": {
                        "stream_id": 1
                      }
                    },
                    {
                      "park": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send": {
                        "stream_id": 1,
                        "bytes": 1000000
                      }
                    }
                  ]
                ]
              }
            }
          ]
        }
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "sleep": {
                  "amount_ms": 100
                }
              },
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 100000
                }
              },
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 10,
                  "period_ms": 50
                }
              },
              {
                "receive_all": {
                  "stream_id": 0
                }
              },
              {
                "send": {
                  "stream_id": 0,
                  "bytes": 2000000
                }
              }
            ],
            [
              {
                "receive": {
                  "stream_id": 1,
                  "bytes": 1000000
                }
              }
            ]
          ]
        }
      ]
    }
  ]
}
