netbench/netbench/src/scenario/snapshots/netbench__scenario__builder__tests__simple.snap
---
source: netbench/netbench/src/scenario/builder.rs
assertion_line: 842
expression: scenario

---
{
  "id": "103c9a6685d18b8d41852dbb5c427caab9181d9e93ba5e4df9ed50021dad935d",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "send_stream": {
                "stream_id": 0
              }
            },
            {
              "send_rate": {
                "stream_id": 0,
                "bytes": 1024,
                "period_ms": 50
              }
            },
            {
              "send": {
                "stream_id": 0,
                "bytes": 1000000
              }
            }
          ]
        }
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 1000000
                }
              }
            ]
          ]
        }
      ]
    }
  ]
}
